--- a/_posts/2012-07-29-less-is-more-in-code.textile
+++ b/_posts/2012-07-29-less-is-more-in-code.textile
@@ -20,56 +20,52 @@ if (!a) {
   b();
 }
 {% endhighlight %}
-
-So for a little while now, i've been encouraging people in the team to always use Double Checked Locking in java. Whats that you may ask? Well, in Java, getting a synchronized lock on things can be slow. A lot of code, including code in <code>java.util.*</code> has points like this: 
-
-{%highlight java linenos %}
-private Object expensive;
-
-public Object getSomething() {
-  synchronized {
-    if (expensive) {
-      expensive = new Object(); 
-    }
-  }
-  return expensive;
+Fairly simple; There's only one real way of writing our code, even though using the else, we can see that, yes, there was a roundabout way of doing this. In <A href="http://golang.org">Go</a>, we have the same thing, basically, except we don't have to use as many brackets. We can write, instead of that, the following.
+{% highlight go %}
+if a {
+  b;
 }
-{% endhighlight %}
-
-The problem here is that you always try to get the lock. The nicer idiom, that is called Double Checked Locking is: 
-
-{%highlight java linenos %}
-public Object getSomething() {
-  if (null == expensive) {
-    synchronized {
-      if (null == expensive) {
-        expensive = new Object(); 
-      }
-    }
-  }
-  return expensive;
+// Or, the opposite
+if !a {
+  // Do nothing
+} else {
+  b;
 }
+{% endhighlight %},
+Note that we don't have the simpler, completely brace free model, because <a href="http://golang.org/doc/effective_go.html#if">Go makes braces mandatory on if blocks.</a>. So far this is all very nice, and it means that when you read a piece of code, there's really only one or two patterns to look out for. Once you learn how an if works, you're done. 
+
+Looking at how to do all this in Ruby, and we find a different way. Ruby allows many more ways of writing the same expression; There's two reasons for this behaviour.
+<ol>
+  <li> In addition to if, there's <em>unless</em>, which is just an "if not" shorthand</li>
+  <li> conditionals can be written as modifiers to a line, so that code is only executed if the suffix is true.</li>
+</ol>
+Let's see what this looks like in practice, in Ruby.
+{% highlight ruby %}
+# The simple way
+if a
+  b
+end
+# and in the else branch
+if !a
+  # do nothing!
+else
+  b
+end
+# as a modifier
+b if a
+# as unless
+unless !a
+  b
+end
+# as unless, the 'natural' way with an else
+unless a
+  # nothing!
+else
+  b
+end
+# as a modifier
+b unless !a
 {% endhighlight %}
+Wow, what a set of combinations. I guess this is nicer for some people who don't like reading inverted conditionals, but the confusion stems from having so many different ways of writing your code. Following the flow of control of some code in Ruby, means I need to keep my mind on reading the conditionals, seeing which of the patterns above the code falls into, and then following the program logic. In Go, Java, C++, or most other languages, the lack of choice makes it easier for me to concentrate on what I need to do. 
 
-This results in a way to only get the lock, and it looks hunky dory. Well almost. Java has a memory model that allows the situation to get muddled, whereby if two different threads are running, and the JVM decides that some optimizations are better, the JVM is free to set the object reference on <code>Object expensive</code> before the constructor has been fully called. Oops! Thats can be a disaster. 
-
-So what are you supposed to do? Well, there are several idioms, but essentially, the problem is that the JVM has decided to optimise this beyond what it should. If you use Java >= 1.5 and use the volatile keyword, you can be guaranteed that the field is a barrier - and that you'll get it fully initialized; That is, in Java 1.5 and above, you can do the following to be safe: 
-
-{%highlight java linenos %}
-private volatile Object expensive;
-
-public Object getSomething() {
-  if (null == expensive) {
-    synchronized {
-      if (null == expensive) {
-        expensive = new Object(); 
-      }
-    }
-  }
-  return expensive;
-}
-{% endhighlight %}
-
-And be done with it. A slightly more thorough <a href="http://tinyurl.com/1rja">"Double Checked Locking" Is Broken </a> article describes the problem in full, with a delve into depths ot the JVM memory model. 
-
-Alternatively, Wikipedia to the rescue provides several examples of different ways of instantiating singletons in Java and other languages in the <a href="http://tinyurl.com/l3ch5">Singleton Pattern</a> article.
+On the small scale, this is what I mean by 'Less is More' . Having choice isn't always a good thing. Most companies i've seen have Style guides for the programming languages they use, and often they say "We don't use this feature in this language, because it confuses our engineers." . I certainly agree, and even on the small things, like conditional expressions, they can make a big difference.
