--- a/_posts/2012-07-29-less-is-more-in-code.textile
+++ b/_posts/2012-07-29-less-is-more-in-code.textile
@@ -22,8 +22,8 @@ if (!a) {
   b();
 }
 {% endhighlight %}
-Fairly simple; There's only one real way of writing our code, even though using the else, we can see that, yes, there was a roundabout way of doing this. In <a href="http://golang.org">Go</a>, we have the same thing, basically, except we don't have to use as many brackets. We can write, instead of that, the following.
-{% highlight go %}
+
+{% highlight go linenos%}
 if a {
   b;
 }
