--- a/_posts/2012-07-29-less-is-more-in-code.textile
+++ b/_posts/2012-07-29-less-is-more-in-code.textile
@@ -9,7 +9,7 @@ Recently, Rob Pike wrote a little bit of history of Go, talking about how <a hre
 
 Consider the barest, simplest control structure in Software Developement, the <i>if</i> statement. Lets think about this in Java where we often write something like the following:
 
-{% highlight java linenos %}
+{% highlight java %}
 if (a) {
   b();
 }
@@ -24,7 +24,7 @@ if (!a) {
 {% endhighlight %}
 p. Fairly simple; There's only one real way of writing our code, even though using the else, we can see that, yes, there was a roundabout way of doing this. In <a href="http://golang.org">Go</a>, we have the same thing, basically, except we don't have to use as many brackets. We can write, instead of that, the following.
 
-{% highlight go linenos%}
+{% highlight go %}
 if a {
   b;
 }
@@ -44,6 +44,7 @@ Looking at how to do all this in Ruby, and we find a different way. Ruby allows 
   <li> conditionals can be written as modifiers to a line, so that code is only executed if the suffix is true.</li>
 </ol>
 Let's see what this looks like in practice, in Ruby.
+
 {% highlight ruby %}
 # The simple way
 if a
@@ -70,6 +71,7 @@ end
 # as a modifier
 b unless !a
 {% endhighlight %}
+
 Wow, what a set of combinations. I guess this is nicer for some people who don't like reading inverted conditionals, but the confusion stems from having so many different ways of writing your code. Following the flow of control of some code in Ruby, means I need to keep my mind on reading the conditionals, seeing which of the patterns above the code falls into, and then following the program logic. In Go, Java, C++, or most other languages, the lack of choice makes it easier for me to concentrate on what I need to do. 
 
 On the small scale, this is what I mean by 'Less is More' . Having choice isn't always a good thing. Most companies i've seen have Style guides for the programming languages they use, and often they say "We don't use this feature in this language, because it confuses our engineers." . I certainly agree, and even on the small things, like conditional expressions, they can make a big difference.
