--- a/_posts/2012-07-29-less-is-more-in-code.textile
+++ b/_posts/2012-07-29-less-is-more-in-code.textile
@@ -1,9 +1,8 @@
 ---
 layout: post
-title: "Double Checked Locking: keep it volatile & above 1.5"
+title: "The Less is More approach, in coding. On a small scale"
 ---
-p(meta). Feb 10 2009
-
+p(meta). Jul 29 2012
 
 Recently, Rob Pike wrote a little bit of history of Go, talking about how <a href="http://commandcenter.blogspot.com/2012/06/less-is-exponentially-more.html">Less is <em>exponentially</em> more.</a>. I've gone through learning Ruby in the last few weeks, and I want to give a minute exmaple of just how true this is, and compare Go (or, frankly, many other languages) to Ruby, and how Less is More. 
 
@@ -22,6 +21,7 @@ if (!a) {
   b();
 }
 {% endhighlight %}
+
 p. Fairly simple; There's only one real way of writing our code, even though using the else, we can see that, yes, there was a roundabout way of doing this. In <a href="http://golang.org">Go</a>, we have the same thing, basically, except we don't have to use as many brackets. We can write, instead of that, the following.
 
 {% highlight go %}
@@ -74,4 +74,4 @@ b unless !a
 
 Wow, what a set of combinations. I guess this is nicer for some people who don't like reading inverted conditionals, but the confusion stems from having so many different ways of writing your code. Following the flow of control of some code in Ruby, means I need to keep my mind on reading the conditionals, seeing which of the patterns above the code falls into, and then following the program logic. In Go, Java, C++, or most other languages, the lack of choice makes it easier for me to concentrate on what I need to do. 
 
-On the small scale, this is what I mean by 'Less is More' . Having choice isn't always a good thing. Most companies i've seen have Style guides for the programming languages they use, and often they say "We don't use this feature in this language, because it confuses our engineers." . I certainly agree, and even on the small things, like conditional expressions, they can make a big difference.
+On the small scale, this is what I mean by 'Less is More' . Having choice isn't always a good thing. Most companies I've seen have Style guides for the programming languages they use, and often they say "We don't use this feature in this language, because it confuses our engineers." . I certainly agree, and even on the small things, like conditional expressions, they can make a big difference.
