--- a/_posts/2012-07-30-street-grafitti-our-new-gallery.textile
+++ b/_posts/2012-07-30-street-grafitti-our-new-gallery.textile
@@ -4,7 +4,7 @@ title: What gallery is relevant?
 ---
 p(meta). Jul 30 2012
 
-I'm a member of the New York <a href="http://www.metmuseum.org/">Metropolitan Museum</a>. I'll go to an event once every three months or so. The art is <i>excellent</i>, with a fine pedigree. Some of it, like the complete <a href="http://en.wikipedia.org/wiki/Temple_of_Dendur">Temple of Dendur</a> which was moved brick by brick from Egypt, is stagerring beyond belief.
+I'm a member of the New York <a href="http://www.metmuseum.org/">Metropolitan Museum</a>. I'll go to an event once every three months or so. The art is <i>excellent</i>, with a fine pedigree. Some of it, like the complete <a href="http://en.wikipedia.org/wiki/Temple_of_Dendur">Temple of Dendur</a> which was moved brick by brick from Egypt, is staggering beyond belief.
 
 Notably, almost all the artwork has a little note next to it, explaining who wrote it, on what, why, and if it is important and interesting enough, a bit of a story about the <i>why</i>. Looking at a piece of art often needs a bit of explanation about what makes it significant. This stuff is really important, actually; So much human history is recorded in the artwork, and the style of the artwork, that it would be tragic if we didn't know these things. 
 
