--- a/_posts/2012-08-24-rationalism-and-abortion-in-the-us.textile
+++ b/_posts/2012-08-24-rationalism-and-abortion-in-the-us.textile
@@ -19,7 +19,7 @@ On the day of the election, ensure that there is at least one more vote for me t
 
 Which is pretty much what most politicians need to do. This of course happens in Australia, too. So what's different? Firstly, Elections in Australia are typically <i>preferential</i> and <i>compulsory</i>. Let's think about how this changes the nature of the political voting game. 
 
-Firstly, people in the US don't have to vote, so only those that feel the need to do so, go to do it. This changes the voting game since politicians are now interested in geting more people to come out and vote for them, which is different than just getting more of the population to vote for them. There is now a game of either getting more people to vote, or less people to vote in a particular spot. For instance, in Ohio, the governor wanted shorter, or longer <a href="http://news.cincinnati.com/article/20120805/NEWS0106/308050053/Voting-time-partisan-battle">voting hours</a> depending on how favourable the local region is to his party. 
+Firstly, people in the US don't have to vote, so only those that feel the need to do so, go to do it. This changes the voting game since politicians are now interested in getting more people to come out and vote for them, which is different than just getting more of the population to vote for them. There is now a game of either getting more people to vote, or less people to vote in a particular spot. For instance, in Ohio, the governor wanted shorter, or longer <a href="http://news.cincinnati.com/article/20120805/NEWS0106/308050053/Voting-time-partisan-battle">voting hours</a> depending on how favourable the local region is to his party. 
 
 Back to abortion. It's a <i>tremendous</i> emotional issue, and if you believe in <a href="http://www.amazon.com/gp/product/0060731338/ref=as_li_qf_sp_asin_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0060731338&linkCode=as2&tag=schonberorgan-20">Freakonomics</a> an economic one. It's also one that I think very few people change their minds on. I don't know many adults who believe that abortion should be legal that change their minds, nor the other way around. So when a politician makes this an issue, they're engaging in wedge politics, effectively galvanizing a number of their constituents to ensure they vote for the candidate based on a deeply emotional, and universal issue.
 
