add the other paragraph

--- a/_posts/2012-08-24-rationalism-and-abortion-in-the-us.textile
+++ b/_posts/2012-08-24-rationalism-and-abortion-in-the-us.textile
@@ -21,6 +21,8 @@ Which is pretty much what most politicians need to do. This of course happens in
 
 Firstly, people in the US don't have to vote, so only those that feel the need to do so, go to do it. This changes the voting game since politicians are now interested in getting more people to come out and vote for them, which is different than just getting more of the population to vote for them. There is now a game of either getting more people to vote, or less people to vote in a particular spot. For instance, in Ohio, the governor wanted shorter, or longer <a href="http://news.cincinnati.com/article/20120805/NEWS0106/308050053/Voting-time-partisan-battle">voting hours</a> depending on how favourable the local region is to his party. 
 
+Secondly, the voting systems here aren't preferential. This has led to a truly two party system in the USA, and means that cross-party policy deals don't exist. Australian politics is littered with agreements for assigning preferences from one party to another based on policy compromises. Fewer extremist positions can exist successfully in Australian politics since there are multiple parties, and successful policy passes vetting from a negotiated pre-vote agreement between parties.
+
 Back to abortion. It's a <i>tremendous</i> emotional issue, and if you believe in <a href="http://www.amazon.com/gp/product/0060731338/ref=as_li_qf_sp_asin_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0060731338&linkCode=as2&tag=schonberorgan-20">Freakonomics</a> an economic one. It's also one that I think very few people change their minds on. I don't know many adults who believe that abortion should be legal that change their minds, nor the other way around. So when a politician makes this an issue, they're engaging in wedge politics, effectively galvanizing a number of their constituents to ensure they vote for the candidate based on a deeply emotional, and universal issue.
 
 It doesn't matter that nobody changed their minds, or whether or not a majority of people hold the opinion. The trick with this kind of thing is to realise it's attempting to get as many people to vote, who otherwise would not have voted at all. It's also easier with emotional issues, and with universal emotional issues, it's even easier and more effective. Everyone has an opinion on Abortion, Gay marriage, criminal behaviour, etc. Not everyone has an opinion on employment, education, mining policy, environmentalism. Clearly, for most politicians, spending time talking about abortion is a good use of time, and it's a better use of time in the states than it is in Australia, by virtue of the whole population voting laws.
