--- a/_posts/2012-08-24-rationalism-and-abortion-in-the-us.textile
+++ b/_posts/2012-08-24-rationalism-and-abortion-in-the-us.textile
@@ -1,28 +1,23 @@
 ---
 layout: post
-title: Why is Abortion such a hot topic in the USA?
+title: Outbak Steakhouse?
 ---
-p(meta). August 24 2012. Debugging code and writing.
+p(meta). November 18. A break in doing laundry
 
-p. I've lived in the USA for a little over two years now, and one notable political difference, amongst many, is just how prominent, loud and constant a debate about abortion is here. I'll spare the details, but last week <a href="http://en.wikipedia.org/wiki/Todd_Akin">Todd Akin</a> said something that has become <i>very</i> controversial. He said:
+A about six and a half years ago, I was in <a href="https://maps.google.com/maps?q=mountain+view+california&hl=en&sll=40.697488,-73.979681&sspn=0.52892,1.234589&t=h&hnear=Mountain+View,+Santa+Clara,+California&z=12">Mountain View, California</a> . I'd started working for Google Inc, and was there with a number of other Australians.
 
-<blockquote>
-Well you know, people always want to try to make that as one of those things, well how do you, how do you slice this particularly tough sort of ethical question. First of all, from what I understand from doctors, that’s really rare. If it’s a legitimate rape, the female body has ways to try to shut that whole thing down. But let’s assume that maybe that didn’t work or something. I think there should be some punishment, but the punishment ought to be on the rapist and not attacking the child.
-</blockquote>
+We had a good time, enjoying the random things that happen only in America, so we decided to find an <a href="http://www.outback.com/">Outback Steakhouse</a>, and behave like drunken Aussies. I still remember the great night with 4 other friends there, getting totally drunk and being the only real Australians for miles and miles around.
 
-What an arsehole. I don't want to talk about how wrong he is, because it's clear that he is, but mostly about why American politicians are so interested in this topic, keep talking about it, and why, although this is a topic in Australian politics, the <a href="http://en.wikipedia.org/wiki/Abortion_in_Australia">situation and debate</a> are much more subdued. I want to find a rational, plausible reason why it's such a different debate here than in Australia.
+We had such a good time, that our waitress loved serving us, and hung out with my friends and I for a while. We drank the beer and read the poorly written signs, and the incorrect Australian flag, until late into the night. 
 
-Politicians are self motivated, and in the states, congressmen, congresswomen and other politicians have a single task for elections, namely.
-<blockquote>
-On the day of the election, ensure that there is at least one more vote for me than for any other person.
-</blockquote>
+As a coincidence, I ran into the same waitress at a sushi restaurant days later, and she mentioned that her manager had let her go for neglecting the other tables that night. Great sushi, restaurant, too; 
 
-Which is pretty much what most politicians need to do. This of course happens in Australia, too. So what's different? Firstly, Elections in Australia are typically <i>preferential</i> and <i>compulsory</i>. Let's think about how this changes the nature of the political voting game. 
+The above is what I usually tell my friends, when we talk about Outback Steakhouse. It turns out that it comes up in conversation not too infrequently at the time. 
 
-Firstly, people in the US don't have to vote, so only those that feel the need to do so, go to do it. This changes the voting game since politicians are now interested in getting more people to come out and vote for them, which is different than just getting more of the population to vote for them. There is now a game of either getting more people to vote, or less people to vote in a particular spot. For instance, in Ohio, the governor wanted shorter, or longer <a href="http://news.cincinnati.com/article/20120805/NEWS0106/308050053/Voting-time-partisan-battle">voting hours</a> depending on how favourable the local region is to his party. 
+In terms of the change in Tech, this is actually a more interesting memory. We, as Australians, had only heard of Outback Steakhouse. We were still getting used to finding results using Google Maps, so we ended up finding the nearest one while in our offices, right in sunny <a href="https://maps.google.com/maps?q=outback+steakhouse+near+mountain+view+california&hl=en&ll=37.644685,-122.176208&spn=1.100432,2.469177&sll=37.386254,-122.083855&sspn=0.138032,0.308647&t=h&hq=outback+steakhouse&hnear=Mountain+View,+Santa+Clara,+California&z=9&iwloc=A">Cupertino</a>. Great, except there was no such thing as a smart phone at the time, all our phones were fairly dumb. 
 
-Secondly, the voting systems here aren't preferential. This has led to a truly two party system in the USA, and means that cross-party policy deals don't exist. Australian politics is littered with agreements for assigning preferences from one party to another based on policy compromises. Fewer extremist positions can exist successfully in Australian politics since there are multiple parties, and successful policy passes vetting from a negotiated pre-vote agreement between parties.
+My father had visited California before, So I had a big set of Rand Mcnally paper maps. These were gigantic, fold out things, and in  total I had about 20 of them. amazingly, they're <a href="http://store.randmcnally.com/us-maps/western-us-maps/california-maps.html?limit=all">still for sale</a> . We weren't sure if we had the right maps with us, so one of my colleagues became clever, pulled out his digital camera, and took a photo of the computer monitor, with Cupertino and the highways on it. That's how he navigated me to that place, by zooming in and out on a small screen on an early 2000s digital camera.
 
-Back to abortion. It's a <i>tremendous</i> emotional issue, and if you believe in <a href="http://www.amazon.com/gp/product/0060731338/ref=as_li_qf_sp_asin_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0060731338&linkCode=as2&tag=schonberorgan-20">Freakonomics</a> an economic one. It's also one that I think very few people change their minds on. I don't know many adults who believe that abortion should be legal that change their minds, nor the other way around. So when a politician makes this an issue, they're engaging in wedge politics, effectively galvanizing a number of their constituents to ensure they vote for the candidate based on a deeply emotional, and universal issue.
+When we got to the restaurant, I amazed my friends by being able to find out the capital of Arizona by sending an SMS to 46645 (Googles SMS number), and getting a response. This was a state of the art interface at the time, and Google still maintains an <a href="sms.google.com">SMS service.</a> I feel as if it's antiquated for most of us with smartphones though, but there is that big half of people that don't own these things. 
 
-It doesn't matter that nobody changed their minds, or whether or not a majority of people hold the opinion. The trick with this kind of thing is to realise it's attempting to get as many people to vote, who otherwise would not have voted at all. It's also easier with emotional issues, and with universal emotional issues, it's even easier and more effective. Everyone has an opinion on Abortion, Gay marriage, criminal behaviour, etc. Not everyone has an opinion on employment, education, mining policy, environmentalism. Clearly, for most politicians, spending time talking about abortion is a good use of time, and it's a better use of time in the states than it is in Australia, by virtue of the whole population voting laws.
+To me, the stark difference is huge now. Today, I could drive to that branch in Cupertino using Voice Navigation from my phone, recalculating as I made a wrong turn, and have a completely functional computer in my hands during Dinner. What's more amazing, is that many of us take this for granted, forgetting how recently we didn't have this, and how we made do with hacked solutions.
