--- a/_posts/2013-08-06-airports-first-impressions.textile
+++ b/_posts/2013-08-06-airports-first-impressions.textile
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Review of the Master Builder at the BAM.
+title: A thought about airports.
 ---
-p(meta). May 23.
+p(meta). August 6, 2013. Sunny sydney winter day
 
 Whenever you travel somewhere, to any destination, the first thing you see and experience there is the airport of that place. We know that first impressions of people matter, but of places? they matter just as much.
 
@@ -10,10 +10,10 @@ Whenever I come to Sydney, the warnings about not bringing in any food, drink, a
 
 In New York, the yells of men asking you if you need a Taxi, over and over, walking into a busy mess of a place, disorganized, insecure, dirt, a mess; Still, it works somehow. Barely. Just like the city. 
 
-Portland Oregon had an airport that was green, lucsious, with ivy to make the parking lot beautiful. Public transport to the airport. A bike lane to the terminal. It was just lovely, civilized. 
+Portland Oregon had an airport that was green, luscious, with ivy to make the parking lot beautiful. Public transport to the airport. A bike lane to the terminal. It was just lovely, civilized. 
 
 Dallas Fort Worth? The lady at airport information was memorable. Elderly, a volunteer, she recommended I step outside the airport - just for a minute - , to breathe the fresh Texas air. She tells me the airport is bigger than Manhattan in area. The airport had a southern style barbecue carvery right outside the gates. In case, of course, you need a kilo of meat before you fly. 
 
-LAX is a mess of lines, traffic, over capacity and just an incredibly unpleasant place to be. It's exactly why i'm writing this post. I've been through that airport literally dozens of times. Not once have I ever wanted to turn the transit into a longer time, purely based on what the airport has to offer. 
+LAX is a mess of lines, traffic, over capacity and just an incredibly unpleasant place to be. It's exactly why I'm writing this post. I've been through that airport literally dozens of times. Not once have I ever wanted to turn the transit into a longer time, purely based on what the airport has to offer. 
 
 I could go on, for all the various worldwide airports I've seen. The fun thing for me is paying attention. You really can get a sense for how a place works outside of it. I always keep my eyes open in those first few minutes when I get off the plane in a new spot.
