--- a/_posts/2009-03-26-travesties-surprisingly-boring.textile
+++ b/_posts/2009-03-26-travesties-surprisingly-boring.textile
@@ -7,7 +7,7 @@ p(meta). 26 March, half asleep in a play.
 
 Tom Stoppard. Goodness. a big name in theatre if ever there is one, and the stc is putting on <a href="http://en.wikipedia.org/wiki/Travesties">Travesties</a> at the Opera House. You'd think it would be really interesting, but my goodnesss, I haven't been bored like that in a play in years and years.
 
-Travesties is set in 1917 Zürich, when James Joyce, Vladimir Lenin and the founder of the Dada movement, Tristan Tzara. The play unfolds through the memory of the then British consulate employee, Henry Carr. Carr is a bit feeble, so his memories are a bit out of order. 
+Travesties is set in 1917 ZÃ¼rich, when James Joyce, Vladimir Lenin and the founder of the Dada movement, Tristan Tzara. The play unfolds through the memory of the then British consulate employee, Henry Carr. Carr is a bit feeble, so his memories are a bit out of order. 
 
 The play is based on real events: Carr was in a production of The Importance of Being Earnest, and much of the play is framed around it. A lot of the play turns into philosophical discussions of art, socialism and literature, thanks to the fictional charactes. Stoppard becomes really clever and weaves iudeas together, becomes really clever: Stoppard makes hundreds of literary references, turns everything into a pun, and makes more clever references than one viewing could discover. 
 
