--- a/_posts/2009-04-28-metamorphosis.textile
+++ b/_posts/2009-04-28-metamorphosis.textile
@@ -11,7 +11,7 @@ As Gregor Samsa awoke one morning from uneasy dreams he found himself transforme
 
 OK, so, it feels like the Sydney Theatre Company has a thing for Kafka at the moment; I don't mind, it's been really good. In that spirit, I went and saw the travelling production of <a href="http://www.sydneytheatre.com.au/2009/tickets/add-ons/metamorphosis">Metamorphosis</a>. Metamorphosis is one of Kafkas' most famous short stories, centering around Gregor Samsa who wakes up one morning to find he has become a giant insect with the mind of a man. The book, as well as the play, centers around how his family deals with this change, at first concerned for him, trying to feed and incorporate him into their lives, and later looking at him has a burden of their past;
 
-The production, thats done a tour around the world before coming to Sydney, faithfully adapts this show. Gísli Örn Gardarsson, who plays Gregor, literally crawls around the ceiling and walls, in one of the most acrobatic performances you could ever see. Gregors alienation from his family is really stark from this perspective: he doesn't even live in the same plane of existence; He sits on the walls, looks out the ceiling. He doesn't occupy the same space as the family, doesn't speak the language; His alienation is complete, and he doesn't understand why he is so different now. 
+The production, thats done a tour around the world before coming to Sydney, faithfully adapts this show. GÃ­sli Ã–rn Gardarsson, who plays Gregor, literally crawls around the ceiling and walls, in one of the most acrobatic performances you could ever see. Gregors alienation from his family is really stark from this perspective: he doesn't even live in the same plane of existence; He sits on the walls, looks out the ceiling. He doesn't occupy the same space as the family, doesn't speak the language; His alienation is complete, and he doesn't understand why he is so different now. 
 
 The highlight, though, is the telling of this story: Gisli climbs around the walls as if it were the floor, in the most amazing death defying way. It's like watching Cirques Du soleil with a real plot infused. The rest of the cast supports the play wonderfully, and the show is deliberately stiff, playing a very wooden two dimensional family around the hero. 
 
