A little spell checking

--- a/_posts/2015-06-21-writing.textile
+++ b/_posts/2015-06-21-writing.textile
@@ -4,13 +4,13 @@ title: Why writing is hard?
 ---
 p(meta). After a great little coffee break reading Essays.
 
-After an hour or so reading <a href="http://amzn.to/1TFM7Tr">The Collected Essays of Leonard Michaels</a>, I realised that i'd read something like 5 or 6 distinct essays. Al of them were actually fascinating, small vignettes into a thought on a biblical story or reminiscing about his father. 
+After an hour or so reading <a href="http://amzn.to/1TFM7Tr">The Collected Essays of Leonard Michaels</a>, I realised that I'd read something like 5 or 6 distinct essays. Al of them were actually fascinating, small vignettes into a thought on a biblical story or reminiscing about his father. 
 
 What struck me though is how <em>short</em> these stories were. Many of these essays carried over maybe 3 or 4 short printed 12 point font pages, and made their points, or lack of points, succinctly and quickly. It struck me that this is probably what hurt my enjoyment of writing as a kid.
 
-I remember writing for school projects, and always bearing in the back of my mind the expected <em>word count</em> from the teacher – 500 words for this essay, 800 words for that story, etc. And then always knowing the shortcut and obssessing over the "Word Count" feature from WordPerfect or Microsoft Word. What pains they were. I felt like I was being measured on the quantity of what I was writing, rather than the quality. Often I'd find that I'd written everything I wanted to write about something, only to find I was a dreaded 200 words away from the needed length. Oh no! The horror! Or worse, when you'd write 500 words more and have to spend hours pretending I was Hemingway writing <a href="http://www.amazon.com/gp/product/0684801221/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0684801221&linkCode=as2&tag=roberschonblo-20&linkId=NIFCWRTMPA25BJUI">The Old Man and the Sea</a>
+I remember writing for school projects, and always bearing in the back of my mind the expected <em>word count</em> from the teacher – 500 words for this essay, 800 words for that story, Etcetera. And then always knowing the short cut and obsessing over the "Word Count" feature from WordPerfect or Microsoft Word. What pains they were. I felt like I was being measured on the quantity of what I was writing, rather than the quality. Often I'd find that I'd written everything I wanted to write about something, only to find I was a dreaded 200 words away from the needed length. Oh no! The horror! Or worse, when you'd write 500 words more and have to spend hours pretending I was Hemingway writing <a href="http://www.amazon.com/gp/product/0684801221/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0684801221&linkCode=as2&tag=roberschonblo-20&linkId=NIFCWRTMPA25BJUI">The Old Man and the Sea</a>
 
-All this comes about from the commercial practice of writing - where magazines and newspapers would push their authors to write a certain number of words, so that advertising can fit in alloted spots, and that paper print runs can fit in a certain number of pages, and the associated costs, etc. Also, educators need to be able to estimate the amount of time marking and reading their students papers. 
+All this comes about from the commercial practice of writing - where magazines and newspapers would push their authors to write a certain number of words, so that advertising can fit in allotted spots, and that paper print runs can fit in a certain number of pages, and the associated costs. Also, educators need to be able to estimate the amount of time marking and reading their students papers. 
 
 As for me though? well, when I'm done nowadays, I'll just stop writing.
 
